Added method to get SendButton. Created ChatMessage class and added methods to send by passing in the chat message and to automatically send whatever is in the EditText. Created an abstract ChatViewListener class with methods 'userIsTyping' and 'userHasStoppedTyping'. Did some other stuff.

--- a/androiduilibrary/src/main/res/layout/chat_view.xml
+++ b/androiduilibrary/src/main/res/layout/chat_view.xml
@@ -42,7 +42,7 @@
             card_view:cardUseCompatPadding="true">
 
             <EditText
-                android:id="@+id/messageBodyField"
+                android:id="@+id/inputEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
