--- a/androiduilibrary/src/main/res/layout/chat_item_rcv.xml
+++ b/androiduilibrary/src/main/res/layout/chat_item_rcv.xml
@@ -16,7 +16,7 @@
         >
 
         <TextView
-            android:id="@+id/chat_message"
+            android:id="@+id/message_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="san-serif-thin"
