--- a/androiduilibrary/src/main/res/layout/chat_item_rcv.xml
+++ b/androiduilibrary/src/main/res/layout/chat_item_rcv.xml
@@ -15,12 +15,16 @@
         android:layout_gravity="left"
         >
 
+        <LinearLayout android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
         <TextView
             android:id="@+id/message_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="san-serif-thin"
-            android:layout_gravity="right|center_vertical"
+            android:layout_gravity="left|center_vertical"
             android:gravity="center_vertical|left"
             android:maxWidth="250dp"
             android:text="My name is timi and I"
@@ -28,6 +32,24 @@
             android:textColor="@color/white"
             android:layout_margin="8dp"
             />
+
+        <TextView
+            android:id="@+id/timestamp_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="san-serif-thin"
+            android:layout_gravity="left"
+            android:gravity="left"
+            android:text="this is the time"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textColor="@color/main_color_gray"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="8dp"
+
+            />
+
+        </LinearLayout>
 
     </android.support.v7.widget.CardView>
 
