--- a/androiduilibrary/src/main/res/layout/chat_item_sent.xml
+++ b/androiduilibrary/src/main/res/layout/chat_item_sent.xml
@@ -17,19 +17,42 @@
         android:layout_gravity="right"
         >
 
-        <TextView
-            android:id="@+id/message_text_view"
+        <LinearLayout android:orientation="vertical"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="san-serif-thin"
-            android:layout_gravity="right|center_vertical"
-            android:gravity="center_vertical|left"
-            android:maxWidth="250dp"
-            android:text="My name is timi and I"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textColor="@color/black"
-            android:layout_margin="8dp"
-            />
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/message_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="san-serif-thin"
+                android:layout_gravity="right|center_vertical"
+                android:gravity="center_vertical|left"
+                android:maxWidth="250dp"
+                android:text="My name is timi and I"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textColor="@color/black"
+                android:layout_margin="8dp"
+                />
+
+            <TextView
+                android:id="@+id/timestamp_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="san-serif-thin"
+                android:layout_gravity="right"
+                android:gravity="right"
+                android:text="this is the time"
+                android:textSize="12sp"
+                android:textColor="@color/main_color_gray"
+                android:layout_marginRight="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginBottom="8dp"
+                />
+
+        </LinearLayout>
+
+
 
     </android.support.v7.widget.CardView>
 
