--- a/androiduilibrary/src/main/res/layout/chat_item_sent.xml
+++ b/androiduilibrary/src/main/res/layout/chat_item_sent.xml
@@ -32,7 +32,10 @@
                 android:text="My name is timi and I"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="@color/black"
-                android:layout_margin="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="2dp"
                 />
 
             <TextView
@@ -43,12 +46,12 @@
                 android:layout_gravity="right"
                 android:gravity="right"
                 android:text="this is the time"
-                android:textSize="12sp"
+                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="@color/main_color_gray"
                 android:layout_marginRight="8dp"
                 android:layout_marginLeft="8dp"
-                android:layout_marginBottom="8dp"
-                />
+                android:layout_marginBottom="2dp"
+                android:textSize="8sp" />
 
         </LinearLayout>
 
