--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,14 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+    style="@style/Widget.AppCompat.ButtonBar"
+    android:orientation="vertical"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:gravity="center_horizontal"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="co.devcenter.android.sample.MainActivity">
 
-    <co.devcenter.android.ChatView
-        android:id='@+id/chat_view'
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <Button
+        android:id="@+id/seperate"
+        android:text="Chat View - Seperate button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
-    </co.devcenter.android.ChatView>
+    <Button
+        android:id="@+id/in_bar"
+        android:text="Chat View - Button in bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
-</RelativeLayout>
+    <Button
+        android:id="@+id/no_button"
+        android:text="Chat View - No button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+</LinearLayout>
