Implement message bubble backgrounds

--- a/app/src/main/res/layout/activity_in_bar.xml
+++ b/app/src/main/res/layout/activity_in_bar.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,14 +9,16 @@
 
     <co.devcenter.android.ChatView
         android:id="@+id/chat_view"
-        app:inputBarBackgroundColor="@color/white"
-        app:sendBtnIconTint="@color/blue"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:bubbleBackgroundRcv="@color/bubble_background_rcv"
+        app:bubbleBackgroundSend="@color/bubble_background_send"
         app:inputBackgroundColor="@android:color/transparent"
-        app:sendBtnBackgroundTint="@android:color/transparent"
+        app:inputBarBackgroundColor="@color/white"
         app:inputElevation="0dp"
         app:inputTextSize="20sp"
+        app:sendBtnBackgroundTint="@android:color/transparent"
         app:sendBtnElevation="0dp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        app:sendBtnIconTint="@color/blue" />
 
 </RelativeLayout>
