--- a/app/src/main/res/layout/activity_seperate.xml
+++ b/app/src/main/res/layout/activity_seperate.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,9 +9,11 @@
 
     <co.devcenter.android.ChatView
         android:id="@+id/chat_view"
-        app:inputElevation="1dp"
-        app:sendBtnBackgroundTint="@color/whatsapp_green"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        app:bubbleBackgroundRcv="@color/bubble_background_rcv"
+        app:bubbleBackgroundSend="@color/bubble_background_send"
+        app:inputElevation="1dp"
+        app:sendBtnBackgroundTint="@color/whatsapp_green" />
 
 </RelativeLayout>
