--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,29 +6,13 @@
 
     style="@style/Widget.AppCompat.ButtonBar"
     android:orientation="vertical"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     android:gravity="center_horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="co.devcenter.android.sample.MainActivity">
 
-    <Button
-        android:id="@+id/seperate"
-        android:text="Chat View - Seperate button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <Button
-        android:id="@+id/in_bar"
-        android:text="Chat View - Button in bar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <Button
-        android:id="@+id/no_button"
-        android:text="Chat View - No button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <co.devcenter.android.ChatView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
