Restructured ChatView UI.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
     tools:context="co.devcenter.android.sample.MainActivity">
 
     <co.devcenter.android.ChatView
+        android:id="@+id/chat_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
