--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,9 @@
         android:id="@+id/chat_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        chatview:backgroundColor="#000000" />
+        chatview:backgroundColor="#000000"
+        chatview:bubbleBackgroundRcv="@color/blue"
+        chatview:bubbleBackgroundSend="@color/sinch_purple"
+        />
 
 </LinearLayout>
