--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,9 +14,9 @@
         android:id="@+id/chat_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        chatview:backgroundColor="@color/white"
+        chatview:backgroundColor="@color/off_white"
         chatview:bubbleElevation="elevated"
         chatview:bubbleBackgroundRcv="@color/blue"
-        chatview:bubbleBackgroundSend="@color/sinch_purple" />
+        chatview:bubbleBackgroundSend="@color/white" />
 
 </LinearLayout>
