Make Input EditText box hint modifiable

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:chatview="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+              xmlns:chatview="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
 
-    style="@style/Widget.AppCompat.ButtonBar"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center_horizontal"
-    android:orientation="vertical"
-    tools:context="co.intentservice.chatui.sample.MainActivity">
+              style="@style/Widget.AppCompat.ButtonBar"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:gravity="center_horizontal"
+              android:orientation="vertical"
+              tools:context="co.intentservice.chatui.sample.MainActivity">
 
     <co.intentservice.chatui.ChatView
-        android:id="@+id/chat_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        chatview:backgroundColor="@color/off_white"
-        chatview:bubbleElevation="elevated"
-        chatview:bubbleBackgroundRcv="@color/blue"
-        chatview:bubbleBackgroundSend="@color/white" />
+            android:id="@+id/chat_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            chatview:backgroundColor="@color/off_white"
+            chatview:bubbleElevation="elevated"
+            chatview:bubbleBackgroundRcv="@color/blue"
+            chatview:bubbleBackgroundSend="@color/white"
+            chatview:inputHint="@string/start_typing"/>
 
 </LinearLayout>
