--- a/chat-ui/src/main/res/layout/chat_item_sent.xml
+++ b/chat-ui/src/main/res/layout/chat_item_sent.xml
@@ -6,7 +6,9 @@
 
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:paddingStart="72dp"
     android:paddingLeft="72dp"
+    android:paddingEnd="16dp"
     android:paddingRight="16dp">
 
     <android.support.v7.widget.CardView
@@ -15,13 +17,13 @@
         app:cardElevation="4dp"
         app:cardBackgroundColor="@color/default_bubble_color_send"
         app:cardUseCompatPadding="true"
-        android:layout_gravity="right"
+        android:layout_gravity="end"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
         <LinearLayout
             android:padding="8dp"
-            android:gravity="right"
+            android:gravity="end"
             android:orientation="vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
@@ -31,7 +33,7 @@
                 tools:text="My name is Timi and I am not a god. Inner places is not the atomic career of the doer."
                 android:textSize="@dimen/default_message_text_size"
                 android:textColor="@color/default_message_color_send"
-                android:gravity="center_vertical|left"
+                android:gravity="center_vertical|start"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
@@ -44,7 +46,7 @@
                 tools:text="12:10 am"
                 android:textSize="@dimen/default_timestamp_text_size"
                 android:textColor="@color/default_tstamp_color_send"
-                android:gravity="center_vertical|left"
+                android:gravity="center_vertical|start"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
