--- a/chat-ui/src/main/res/layout/chat_item_rcv.xml
+++ b/chat-ui/src/main/res/layout/chat_item_rcv.xml
@@ -5,14 +5,16 @@
 
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:paddingStart="16dp"
     android:paddingLeft="16dp"
+    android:paddingEnd="72dp"
     android:paddingRight="72dp">
 
     <android.support.v7.widget.CardView
         android:id="@+id/bubble"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="left"
+        android:layout_gravity="start"
         app:cardBackgroundColor="@color/default_bubble_color_rcv"
         app:cardCornerRadius="8dp"
         app:cardUseCompatPadding="true">
@@ -20,7 +22,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="left"
+            android:gravity="start"
             android:orientation="vertical"
             android:padding="8dp">
 
@@ -28,8 +30,8 @@
                 android:id="@+id/message_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="left"
-                android:gravity="center_vertical|left"
+                android:layout_gravity="start"
+                android:gravity="center_vertical|start"
                 android:textColor="@color/default_message_color_rcv"
                 android:textSize="@dimen/default_message_text_size"
                 tools:text="My name is Timi and I am..." />
@@ -42,8 +44,8 @@
                 android:id="@+id/timestamp_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:gravity="center_vertical|left"
+                android:layout_gravity="end"
+                android:gravity="center_vertical|end"
                 android:textColor="@color/default_tstamp_color_rcv"
                 android:textSize="@dimen/default_timestamp_text_size"
                 tools:text="12:10 am" />
