--- a/chat-ui/src/main/res/layout/chat_item_dots.xml
+++ b/chat-ui/src/main/res/layout/chat_item_dots.xml
@@ -3,6 +3,7 @@
     xmlns:dots="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:paddingStart="16dp"
     android:paddingLeft="16dp">
 
     <android.support.v7.widget.CardView
