--- a/chat-ui/src/main/res/layout/chat_view.xml
+++ b/chat-ui/src/main/res/layout/chat_view.xml
@@ -36,9 +36,12 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_marginBottom="12dp"
         android:layout_marginLeft="12dp"
+        android:layout_marginStart="12dp"
         android:layout_toLeftOf="@id/sendButton"
+        android:layout_toStartOf="@id/sendButton"
         android:descendantFocusability="beforeDescendants"
         android:focusable="true"
         android:focusableInTouchMode="true"
