--- a/chat-ui/src/main/res/layout/chat_item_rcv.xml
+++ b/chat-ui/src/main/res/layout/chat_item_rcv.xml
@@ -27,6 +27,19 @@
             android:padding="8dp">
 
             <TextView
+                android:id="@+id/sender_text_view"
+                tools:text="Timi"
+                android:textSize="@dimen/default_message_text_size"
+                android:textColor="@color/default_message_color_rcv"
+                android:layout_gravity="center_vertical|start"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"
+                android:textStyle="bold"
+                android:visibility="gone"
+                tools:visibility="visible"/>
+
+            <TextView
                 android:id="@+id/message_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
