--- a/chat-ui/src/main/res/layout/chat_item_sent.xml
+++ b/chat-ui/src/main/res/layout/chat_item_sent.xml
@@ -29,6 +29,20 @@
             android:layout_height="wrap_content">
 
             <TextView
+                android:id="@+id/sender_text_view"
+                tools:text="Michael Obi"
+                android:textSize="@dimen/default_message_text_size"
+                android:textColor="@color/default_message_color_send"
+                android:layout_gravity="center_vertical|start"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"
+                android:textStyle="bold"
+                android:visibility="gone"
+                tools:visibility="visible"/>
+
+
+            <TextView
                 android:id="@+id/message_text_view"
                 tools:text="My name is Timi and I am not a god. Inner places is not the atomic career of the doer."
                 android:textSize="@dimen/default_message_text_size"
