Issue 16: - Added 2 additional attributes 'backgroundRcv' and 'backgroundSend' that will allow devs to specify the background color of the entire row of a received and/or sent message - Passing the 2 new variables crom ChatView, through to the MessageViewHolder - Altered and added code in method setBackground of MessageViewHolder to apply background color to both the bubble and entire row of sent/received messages - Added the 2 new attributes to activity_main.xml to demonstrate their use - Added a 'SENT' message with 1.5 seconds delay to MainActivity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,8 @@
         android:layout_height="match_parent"
         chatview:backgroundColor="@color/off_white"
         chatview:bubbleElevation="elevated"
+        chatview:backgroundRcv="@color/whatsapp_green"
+        chatview:backgroundSend="@color/whatsapp_green"
         chatview:bubbleBackgroundRcv="@color/blue"
         chatview:bubbleBackgroundSend="@color/white" />
 
