--- a/chat-ui/src/main/res/layout/chat_item_rcv.xml
+++ b/chat-ui/src/main/res/layout/chat_item_rcv.xml
@@ -10,61 +10,81 @@
     android:paddingEnd="72dp"
     android:paddingRight="72dp">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/bubble"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="start"
-        app:cardBackgroundColor="@color/default_bubble_color_rcv"
-        app:cardCornerRadius="8dp"
-        app:cardUseCompatPadding="true">
+        android:paddingBottom="8dp">
 
-        <LinearLayout
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profile_icon"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginEnd="10dp"
+            android:paddingTop="4dp"
+            android:layout_gravity="start"
+            android:layout_marginRight="10dp"
+            tools:src="@color/dark_gray"
+            android:visibility="gone"
+            tools:visibility="visible"/>
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/bubble"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="start"
-            android:orientation="vertical"
-            android:padding="8dp">
+            android:layout_gravity="start"
+            app:cardBackgroundColor="@color/default_bubble_color_rcv"
+            app:cardCornerRadius="8dp">
 
-            <TextView
-                android:id="@+id/sender_text_view"
-                tools:text="Timi"
-                android:textSize="@dimen/default_message_text_size"
-                android:textColor="@color/default_message_color_rcv"
-                android:layout_gravity="center_vertical|start"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="4dp"
-                android:textStyle="bold"
-                android:visibility="gone"
-                tools:visibility="visible"/>
+                android:gravity="start"
+                android:orientation="vertical"
+                android:padding="8dp">
 
-            <TextView
-                android:id="@+id/message_text_view"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="start"
-                android:gravity="center_vertical|start"
-                android:textColor="@color/default_message_color_rcv"
-                android:textSize="@dimen/default_message_text_size"
-                tools:text="My name is Timi and I am..." />
+                <TextView
+                    android:id="@+id/sender_text_view"
+                    tools:text="Timi"
+                    android:textSize="@dimen/default_message_text_size"
+                    android:textColor="@color/default_message_color_rcv"
+                    android:layout_gravity="center_vertical|start"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="4dp"
+                    android:textStyle="bold"
+                    android:visibility="gone"
+                    tools:visibility="visible"/>
 
-            <android.support.v4.widget.Space
-                android:layout_width="match_parent"
-                android:layout_height="4dp" />
+                <TextView
+                    android:id="@+id/message_text_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:gravity="center_vertical|start"
+                    android:textColor="@color/default_message_color_rcv"
+                    android:textSize="@dimen/default_message_text_size"
+                    tools:text="My name is Timi and I am..." />
 
-            <TextView
-                android:id="@+id/timestamp_text_view"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:gravity="center_vertical|end"
-                android:textColor="@color/default_tstamp_color_rcv"
-                android:textSize="@dimen/default_timestamp_text_size"
-                tools:text="12:10 am" />
+                <android.support.v4.widget.Space
+                    android:layout_width="match_parent"
+                    android:layout_height="4dp" />
 
-        </LinearLayout>
+                <TextView
+                    android:id="@+id/timestamp_text_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:gravity="center_vertical|end"
+                    android:textColor="@color/default_tstamp_color_rcv"
+                    android:textSize="@dimen/default_timestamp_text_size"
+                    tools:text="12:10 am" />
 
-    </android.support.v7.widget.CardView>
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
+    </LinearLayout>
+
+
 
 </FrameLayout>
