--- a/chat-ui/src/main/res/layout/chat_item_sent.xml
+++ b/chat-ui/src/main/res/layout/chat_item_sent.xml
@@ -41,7 +41,6 @@
                 android:visibility="gone"
                 tools:visibility="visible"/>
 
-
             <TextView
                 android:id="@+id/message_text_view"
                 tools:text="My name is Timi and I am not a god. Inner places is not the atomic career of the doer."
@@ -50,6 +49,13 @@
                 android:gravity="center_vertical|start"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
+
+            <android.support.v7.widget.AppCompatImageView
+                android:id="@+id/image_view"
+                android:visibility="gone"
+                android:background="@color/main_color_gray"
+                android:layout_width="180dp"
+                android:layout_height="200dp" />
 
             <android.support.v4.widget.Space
                 android:layout_width="match_parent"
