--- a/chat-ui/src/main/res/layout/chat_item_sent.xml
+++ b/chat-ui/src/main/res/layout/chat_item_sent.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingStart="72dp"
@@ -50,14 +50,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
-            <android.support.v7.widget.AppCompatImageView
+            <com.facebook.drawee.view.SimpleDraweeView
                 android:id="@+id/image_view"
-                android:visibility="gone"
-                android:adjustViewBounds="true"
-                android:layout_width="wrap_content"
-                android:maxWidth="180dp"
-                android:maxHeight="200dp"
-                android:layout_height="wrap_content" />
+                android:layout_width="180dp"
+                android:layout_height="200dp"
+                fresco:placeholderImage="@drawable/ic_send_white_24dp"
+                />
 
             <android.support.v4.widget.Space
                 android:layout_width="match_parent"
