--- a/chat-ui/src/main/res/layout/chat_item_rcv.xml
+++ b/chat-ui/src/main/res/layout/chat_item_rcv.xml
@@ -10,7 +10,7 @@
     android:paddingEnd="72dp"
     android:paddingRight="72dp">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/bubble"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -49,7 +49,7 @@
                 android:textSize="@dimen/default_message_text_size"
                 tools:text="My name is Timi and I am..." />
 
-            <android.support.v4.widget.Space
+            <Space
                 android:layout_width="match_parent"
                 android:layout_height="4dp" />
 
@@ -65,6 +65,6 @@
 
         </LinearLayout>
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 </FrameLayout>
